--- a/hw2/index.html
+++ b/hw2/index.html
@@ -108,14 +108,13 @@
 				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw2/images/cow_split.png" alt="cow_split">
 			</div>
 			<div class="column">
-				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw2/images/cow_split_flipped.png" alt="cow_split_flipped">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw2/images/cow_split_and_flipped.png" alt="cow_split_and_flipped">
 			</div>
 		</div>
 		<br>
 		
 		<h3><b>Part 6: Loop Subdivision for Mesh Upsampling</b></h3>
 		<p style="color: #DBDEE1; width: 100%"> </p>
-		<br>
 		<br>
 	</body>
 </html>
