--- a/hw3/index.html
+++ b/hw3/index.html
@@ -1,6 +1,6 @@
 <html>
 	<div class="container">
-  		<img src="https://github.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/blob/master/hw2/images/malevolent-2.png?raw=true" alt="Malevolent Meshes">
+  		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/ingeniousilluminators.png" alt="Ingenious Illuminators">
 	</div>
 	<head>
 		<script type="text/javascript" id="MathJax-script" async
@@ -14,10 +14,10 @@
   			};
 		</script>
  		<link rel="stylesheet" href="styling.css">
-		<Title>Homework 2 - Geometric Modeling </Title>
+		<Title>Homework 3 - Pathtracer </Title>
 	</head>
 	<body>
-		<h2>Homework 2 - <b>Geometric Modeling</b></h2>
+		<h2>Homework 3 - <b>Pathtracer</b></h2>
 		<center>
 		<h5 style="color: #DBDEE1">by Sriram Srivatsan &#40;sriram.srivatsan &#40;at&#41; berkeley.edu&#41; and Jaron Erba &#40;jaronerba &#40;at&#41; berkeley.edu&#41;</h5>
 		</center>
