--- a/hw3/index.html
+++ b/hw3/index.html
@@ -43,17 +43,17 @@
 			</div>
 		</div>
 		<div class="image123">
-		    <div style="float:left;margin-right:5px;">
-		        <img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw2/images/step2.png" />
-		        <p style="text-align:center;">This is image 1</p>
+		    <div>
+		        <img src="/images/tv.gif" />
+		        <p>This is image 1</p>
 		    </div>
-		    <div style="float:left;margin-right:5px;">
-		        <img class="middle-img" src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw2/images/step2.png" />
-		        <p style="text-align:center;">This is image 2</p>
+		    <div>
+		        <img class="middle-img" src="/images/tv.gif/" />
+		        <p>This is image 2</p>
 		    </div>
-		    <div style="float:left;margin-right:5px;">
-		        <img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw2/images/step2.png" />
-		        <p style="text-align:center;">This is image 3</p>
+		    <div>
+		        <img src="/images/tv.gif/" />
+		        <p>This is image 3</p>
 		    </div>
 		</div>
 		<div class="row">
