--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
-<html>
+<html> 
+	<div class="container">
+  		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw3/ingeniousilluminators.png" alt="Ingenious Illuminators">
+	</div>
 	<head>
-		<Title>Sriram Srivatsan CS184 Pages</Title>
- 		<link rel="stylesheet" href="hw1/styling.css">
-	</head>
-		
+		<script type="text/javascript" id="MathJax-script" async
+  			src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+		</script>
+		<script>
+  			MathJax = {
+    				tex: {
+      					inlineMath: [['$', '$']]
+    				}
+  			};
+		</script>
+ 		<Title>Sriram Srivatsan CS184 Pages</Title>
+ 		<link rel="stylesheet" href="styling.css">
 	</head>
 	<body>
 		<h3>CS184/284A Homework Webpages for Sriram Srivatsan</h3>
