--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@
 		</script>
  		<Title>Sriram Srivatsan CS184 Pages</Title>
  		<link rel="stylesheet" href="styling.css">
+		
+		<style>
+		a:link, a:visited {
+		  background-color: white;
+		  color: #DBDEE1;
+		  padding: 14px 25px;
+		  text-align: center;
+		  text-decoration: none;
+		  display: inline-block;
+		}
+		
+		a:hover, a:active {
+		  background-color: white;
+		}
+		</style>
+
 	</head>
 	<body>
 		<center>
