--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		
 		<style>
 		a:link, a:visited {
-		  background-color: DBDEE1;
+		  background-color: #DBDEE1;
 		  color: #17191A;
 		  padding: 14px 25px;
 		  text-align: center;
