--- a/index.html
+++ b/index.html
@@ -33,24 +33,32 @@
 
 	</head>
 	<body>
+		<h2>CS 184 Writeups</b></h2>
 		<center>
 		<h5 style="color: #DBDEE1">by Sriram Srivatsan &#40;sriram.srivatsan &#40;at&#41; berkeley.edu&#41; and Jaron Erba &#40;jaronerba &#40;at&#41; berkeley.edu&#41;</h5>
 		</center>
-		<br><br>
+		<br><br><br>
 		<h3><b>Homework 1 - Rasterizer</b></h3>
+		<p style="color: #DBDEE1; width: 100%">Homework 2 was all about geometric modeling. In Part I, we first started with drawing curves using control points using de Casteljau subdivision. Using this abstraction, we increased our dimensionality to surfaces in order to render full .bez files. </p>
 		<br>
 		<a href="/hw1/index.html"><b>Homework 1 - Rasterizer</b></a>
-		<br><br>
+		<br><br><br>
 		<h3><b>Homework 2 - Meshes</b></h3>
 		<p style="color: #DBDEE1; width: 100%">Homework 2 was all about geometric modeling. In Part I, we first started with drawing curves using control points using de Casteljau subdivision. Using this abstraction, we increased our dimensionality to surfaces in order to render full .bez files. </p>
 		<p style="color: #DBDEE1; width: 100%">Part II was all about meshes and mesh algorithms. First, we started off by implementing area-weighted vertex normals for Phong shading, making our teapots and other mesh structures look less square. We then implemented edge flipping and splitting which allowed us to modify our mesh in real time. Finally, we implemented upsampling of our mesh through loop subdivision by using our edge splitting and flipping abstractions.</p>
 		<p style="color: #DBDEE1; width: 100%">Overall, the project was more fun than challenging. Unfortunately, pointers were our main issue throughout Part II, since a single bad reassignment could percolate, and debugging would require us to remember each step precisely. Thankfully, we simplified this process by writing out the algorithm by hand before we even started coding, which gave us something to reference in case anything went wrong.</p>
 		<br>
 		<a href="/hw2/index.html"><b>Homework 2 - Meshes</b></a>
-		<br><br>
-		<a href="/hw3/index.html">Homework 3</a>
-		<br><br>
-		<a href="/hw4/index.html">Homework 4</a>
+		<br><br><br>
+		<h3><b>Homework 3 - Pathtracer</b></h3>
+		<p style="color: #DBDEE1; width: 100%">Homework 2 was all about geometric modeling. In Part I, we first started with drawing curves using control points using de Casteljau subdivision. Using this abstraction, we increased our dimensionality to surfaces in order to render full .bez files. </p>
+		<br>
+		<a href="/hw3/index.html">Homework 3 - Pathtracer</a>
+		<br><br><br>
+		<h3><b>Homework 4 - Unknown</b></h3>
+		<p style="color: #DBDEE1; width: 100%">Homework 2 was all about geometric modeling. In Part I, we first started with drawing curves using control points using de Casteljau subdivision. Using this abstraction, we increased our dimensionality to surfaces in order to render full .bez files. </p>
+		<br>
+		<a href="/hw4/index.html">Homework 4 - Unknown</a>
 	</body>
 	<script>
 		var links = document.body.getElementsByTagName("a")
