--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 		<br><br><br>
 		<h3><b>Homework 3 - Pathtracer</b></h3>
 		<p style="color: #DBDEE1; width: 100%">Homework 2 was all about geometric modeling. In Part I, we first started with drawing curves using control points using de Casteljau subdivision. Using this abstraction, we increased our dimensionality to surfaces in order to render full .bez files. </p>
-		<a href="/hw3/index.html">Homework 3 - Pathtracer</a>
+		<a href="/hw3/index.html">><b>Homework 3 - Pathtracer</b>r</a>
 		<br><br><br>
 		<h3><b>Homework 4 - Unknown</b></h3>
 		<p style="color: #DBDEE1; width: 100%">Homework 2 was all about geometric modeling. In Part I, we first started with drawing curves using control points using de Casteljau subdivision. Using this abstraction, we increased our dimensionality to surfaces in order to render full .bez files. </p>
-		<a href="/hw4/index.html">Homework 4 - Unknown</a>
+		<a href="/hw4/index.html">><b>Homework 4 - Unknown</b></a>
 	</body>
 	<script>
 		var links = document.body.getElementsByTagName("a")
